fix(dataroom): overflow hidden in Assets Secured

--- a/src/components/DataRoom/AssetsSecured/styles.module.css
+++ b/src/components/DataRoom/AssetsSecured/styles.module.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   padding: 200px 128px 256px;
+  overflow: hidden;
 }
 
 .label {
